--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
   "author": "Hugo H. Fernández",
   "license": "ISC",
   "dependencies": {
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
     "@types/mssql": "^4.0.7",
+    "codelyzer": "^4.3.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "moment": "^2.22.0",
     "mssql": "^4.1.0",
     "node-schedule": "^1.3.0",
     "path": "^0.12.7",
+    "rxjs": "^6.2.0",
     "tsc": "^1.20150623.0",
     "tslint": "^5.10.0",
+    "tslint-fix": "^0.1.3",
     "url_parser": "^1.0.5"
   },
   "devDependencies": {
